# misc-projects

C++/: big_int.cpp  big_int.h
C++/hypergraph_noise_removal/: edge.cpp  edge.h  filter.cpp  filter.h  hypergraph.cpp  hypergraph.h  hypergraph_noise_removal.pro  image.cpp  image.h  main.cpp  readme  spernerfilter.cpp  spernerfilter.h  utils.h  vertex.cpp  vertex.h
Javascript/Gauss-Jordan_Elimination/: index.html
Learning_Projects/glsl_cookbook/GLSL_GeneralProject/: .fuse_hidden0000065600000033  CMakeLists.txt  basic.frag  basic.vert
Matlab/: gauss_jacobi.m  gauss_seidel.m  hilbert_mat.m  spectral_radius.m
Matlab/3d_novel_histogram_equalization_method/: .~lock.pdf.txt#  CalculateOutputProbabilities.m  CalculateProbabilities.m  EqualizeHistogram.m  HistogramEq.m  README.md  RGBHistogramEqualization.m  gradient.tif  gradient.tiff  lena_3_bits.tif  lena_4x4.tif  readme  test.tif
Matlab/PCADR_Ham_Spam_Classification/: BuildClassesMatrix.m  BuildMessageVector.m  BuildVocabulary.m  ClassifyMessage.m  ClassifyPartition.m  ExtractFeatures.m  GetPrincipalComponents.m  KFoldCrossValidation.m  ReconstructionError.m  RemoveInfrequentWords.m  TenFoldCrossValidation.m  readme
Matlab/sgw_edge_detection/: GenerateGaborKernel.m  GenerateGaborKernel.m~  GenerateGaborWavelet.m  README.md  SimplifiedGaborFilter.m  SimplifiedGaborFilter.m~  lena_small.tif
Matlab/svlm/: README.md  readme  readme~  svlm.m
Snake_HTML5/: game.js  index.html  snake.js
gauss-jordan elimination/: gauss.js  index.html
glsl_cookbook/GLSL_GeneralProject/: CMakeLists.txt  basic.frag  basic.vert  (+1 more)
(+24 files in other folders)
